--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,69 +16,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "body_index = torch.as_tensor(\n",
-    "    [1,2,0] , dtype = torch.long\n",
-    ").squeeze()\n",
-    "\n",
-    "one_hot = F.one_hot(body_index, num_classes=4)\n",
-    "f_x = torch.randn(3,1)\n",
-    "f_y = torch.randn(3,1)\n",
-    "force = torch.zeros(3, 4 ,2)"
+    "body_index = [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,-1] # 0-17, 18 bodies\n",
+    "force = torch.randn(10, 3)\n",
+    "body_index = torch.as_tensor(body_index)\n",
+    "num = len(body_index)\n",
+    "tmp_index = torch.randint(0, num, (10,))\n",
+    "tmp_index = body_index[tmp_index]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([3, 4])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(one_hot.shape)\n",
-    "force[torch.arange(3), body_index] = torch.cat([f_x, f_y], dim=1)"
+    "mask = tmp_index == -1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "force[mask] = 0.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[ 0.0000,  0.0000],\n",
-       "         [ 1.7383,  1.1086],\n",
-       "         [ 0.0000,  0.0000],\n",
-       "         [ 0.0000,  0.0000]],\n",
-       "\n",
-       "        [[ 0.0000,  0.0000],\n",
-       "         [ 0.0000,  0.0000],\n",
-       "         [ 1.2363, -1.1247],\n",
-       "         [ 0.0000,  0.0000]],\n",
-       "\n",
-       "        [[-0.5505,  2.0544],\n",
-       "         [ 0.0000,  0.0000],\n",
-       "         [ 0.0000,  0.0000],\n",
-       "         [ 0.0000,  0.0000]]])"
+       "tensor([10,  3,  7, 13,  5,  6,  0,  7,  9, 10])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "force"
+    "tmp_index.clamp(min = 0, max = 16)"
    ]
   },
   {
