--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,6 +876,171 @@
    "outputs": [],
    "source": [
     "res = net(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[ 0.0133, -0.0153,  0.0105,  ..., -0.0596,  0.0052,  0.0633],\n",
+      "         [ 0.0126, -0.0127,  0.0336,  ..., -0.0941,  0.0138,  0.0018],\n",
+      "         [-0.0151, -0.0243,  0.0075,  ...,  0.0183, -0.0211, -0.0049],\n",
+      "         ...,\n",
+      "         [-0.0162,  0.0233, -0.0164,  ...,  0.0485,  0.0029,  0.0357],\n",
+      "         [-0.0262,  0.0108,  0.0273,  ...,  0.0073, -0.0678,  0.0023],\n",
+      "         [-0.0461, -0.0137, -0.0086,  ..., -0.0030, -0.0267,  0.0228]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "sz = (1,32,32)\n",
+    "t = torch.empty(sz)\n",
+    "nn.init.orthogonal_(t)\n",
+    "print(t)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normed_t = l2norm(t)\n",
+    "res = einsum('h i d, h j d ->h i j', normed_t,normed_t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 1.0000e+00,  3.8754e-02, -2.2172e-02,  ...,  1.9489e-01,\n",
+       "          -1.0454e-01,  1.5987e-04],\n",
+       "         [ 3.8754e-02,  1.0000e+00, -2.6583e-01,  ..., -2.1387e-01,\n",
+       "           8.9059e-02,  9.0151e-03],\n",
+       "         [-2.2172e-02, -2.6583e-01,  1.0000e+00,  ..., -1.9104e-01,\n",
+       "           7.0439e-02,  1.6044e-01],\n",
+       "         ...,\n",
+       "         [ 1.9489e-01, -2.1387e-01, -1.9104e-01,  ...,  1.0000e+00,\n",
+       "           2.4896e-01, -1.2304e-01],\n",
+       "         [-1.0454e-01,  8.9059e-02,  7.0439e-02,  ...,  2.4896e-01,\n",
+       "           1.0000e+00,  2.1640e-01],\n",
+       "         [ 1.5987e-04,  9.0151e-03,  1.6044e-01,  ..., -1.2304e-01,\n",
+       "           2.1640e-01,  1.0000e+00]]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss = orthogonal_loss_fn(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PushConfig:\n",
+    "    def __init__(self,\n",
+    "                 id,\n",
+    "                 body_index_list:list,\n",
+    "                 change_interval:int,\n",
+    "                 force_list:list, ) -> None:\n",
+    "        self.id = id \n",
+    "        self.body_index_list =body_index_list\n",
+    "        self.change_interval = change_interval\n",
+    "        self.force_list = force_list \n",
+    "        assert len(self.body_index_list) > 0 and  len(self.force_list) > 0\n",
+    "        self._force = self.force_list[0]\n",
+    "        self._body_index = self.body_index_list[0] \n",
+    "    \n",
+    "    def _change(self):\n",
+    "        self._force = np.random.choice(self.force_list)\n",
+    "        self._body_index = np.random.choice(self.body_index_list) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_config = PushConfig(id = 0, \n",
+    "                         body_index_list=[1,2,3,4],\n",
+    "                         change_interval=10,\n",
+    "                         force_list=[1,2,3,4])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = np.load('logs/Eval/VQ-STG_Forward-stationary_push-DebugEval.npy',allow_pickle=True).item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "force (100, 1011, 17, 3)\n",
+      "done (100, 1011)\n",
+      "tracking_error (100, 1011)\n",
+      "base_vel (100, 1011, 3)\n",
+      "first_done (100,)\n",
+      "Fall (100,)\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/jijingtian/project/MetaRobotics/notebook.ipynb Cell 20\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a224c6162227d/home/jijingtian/project/MetaRobotics/notebook.ipynb#X26sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfor\u001b[39;00m k,v \u001b[39min\u001b[39;00m tmp\u001b[39m.\u001b[39mitems():\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a224c6162227d/home/jijingtian/project/MetaRobotics/notebook.ipynb#X26sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mprint\u001b[39m(k,v\u001b[39m.\u001b[39;49mshape)    \n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'shape'"
+     ]
+    }
+   ],
+   "source": [
+    "for k,v in tmp.items():\n",
+    "    print(k,v.shape)    "
    ]
   },
   {
